# string-pool

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
src/: lib.rs  pool.rs  string.rs
src/pool/: default.rs  global.rs  mod.rs  no.rs
src/tests/: global_pool.rs  string.rs
