[package]
name = "string-pool"
version = "0.2.0"
description = "Global immutable string pool, like Java"
edition = "2021"
authors = ["Meadowsys"]
repository = "https://github.com/Meadowsys/string-pool.git"
license = "MIT"
include = ["src"]

[dev-dependencies]
rand = "0.8.5"

[dependencies]
hashbrown = "0.14.3"
parking_lot = "0.12.1"
lazy-wrap = "0.4.1"

[features]
nightly = []
